# ai-debate

./: .gitignore  An-ai-debate.ipynb  Analyses.ipynb  LICENSE  README.md  pyproject.toml
ai_debater/: debater_tools.py  io_database.py  prompt_engineering.py  prompt_interface.py
ai_debater/models/: abstractai_chatter.py  claude3ai_chatter.py  gemini_chatter.py  mistralai_chatter.py  openai_chatter.py
