[tool.poetry]
name = "ai-debater"
version = "0.1.0"
description = "Letting LLM (d)elevating the dabate"
authors = ["Olivier J.N. Bertrand <bolirev@hotmail.com>"]
packages = [{include = "ai_debater", from = "."}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
numpy = "*"
jupyter = "*"
pandas = { version = "^2.0.0", extras = ["tables"]}
requests = "*"
tables = "*"
python-dotenv = "^1.0.0"
xmltodict = "^0.13.0"
lxml = "^5.1.0"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
google-generativeai = "^0.4.0"
google-cloud-aiplatform = "^1.43.0"
mistralai = "^0.1.3"
anthropic = "^0.21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
